atualização da tela feedback

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style/home.css">
-    <title>lithub</title>
+    <title>LitHub</title>
 </head>
 <body>
     <header>
@@ -14,7 +14,7 @@
             <ul class="nav-menu"> 
                 <li class="nav-item"><a href="./index.html">Home</a></li>
                 <li class="nav-item"><a href="./biblioteca.html">Biblioteca</a></li>
-                <li class="nav-item"><a href="#">Feedback</a></li>
+                <li class="nav-item"><a href="./feedback.html">Feedback</a></li>
                 <li class="nav-item"><a href="#">Contato</a></li>
             </ul>
 
