finalização tela contato e mapa do projeto no readme

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li class="nav-item"><a href="./index.html">Home</a></li>
                 <li class="nav-item"><a href="./biblioteca.html">Biblioteca</a></li>
                 <li class="nav-item"><a href="./feedback.html">Feedback</a></li>
-                <li class="nav-item"><a href="#">Contato</a></li>
+                <li class="nav-item"><a href="./contato.html">Contato</a></li>
             </ul>
 
             <!--Menu para caso queira abrir o site pelo smartphone-->
